--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 ---
 layout: workshop
 root: .
-venue: FIXME (brief name of host site)
-address: FIXME (street address of home location)
-country: FIXME (country (hyphenated if need be, like 'United-Kingdom')
-language: FIXME (language code like 'en' or 'fr')
+venue: St. Leo's College (brief name of host site)
+address: College Road, St Lucia QLD 4067 (street address of home location)
+country: Australia (country (hyphenated if need be, like 'United-Kingdom')
+language: en (language code like 'en' or 'fr')
 latlng: (fractional latitude and longitude like 41.7901128,-87.6007318)
-humandate: FIXME (use the format 'Feb 17-18, 2020' (without the quotes)
-humantime: FIXME (use the format '9:00 am - 4:30 pm' (without the quotes)
-startdate: FIXME (use YYYY-MM-DD format like 2015-01-01)
-enddate: FIXME (use YYYY-MM-DD format like 2015-01-02)
-instructor: (list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"])
-helper: (list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"])
-contact: FIXME (contact email address for workshop organizer)
+humandate: Jul, 2015 (use the format 'Feb 17-18, 2020' (without the quotes)
+humantime: Jul, 2015 (use the format '9:00 am - 4:30 pm' (without the quotes)
+startdate: 2015-07-DD (use YYYY-MM-DD format like 2015-01-01)
+enddate: 2015-07-DD (use YYYY-MM-DD format like 2015-01-02)
+instructor: Amanda Miotto, Mitchell Stanton-Cook, Areej Alsheikh-Hussain, Sam Hames, Paula Martinez (list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"])
+helper: Michael Imelfort (ACE), Nick Coghlan (Red Hat) (list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"])
+contact: b.weaver@uq.edu.au or m.stantoncook@gmail.com (contact email address for workshop organizer)
 etherpad: # FIXME (insert the URL for your Etherpad if you're using one)
 eventbrite: # FIXME (delete this if not used, otherwise uncomment and provide 1234567890AB key for Eventbrite registration)
 ---
