--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@ address: College Road, St Lucia QLD 4067 (street address of home location)
 country: Australia (country (hyphenated if need be, like 'United-Kingdom')
 language: en (language code like 'en' or 'fr')
 latlng: (fractional latitude and longitude like 41.7901128,-87.6007318)
-humandate: Jul, 2015 (use the format 'Feb 17-18, 2020' (without the quotes)
-humantime: Jul, 2015 (use the format '9:00 am - 4:30 pm' (without the quotes)
-startdate: 2015-07-DD (use YYYY-MM-DD format like 2015-01-01)
-enddate: 2015-07-DD (use YYYY-MM-DD format like 2015-01-02)
+humandate: Jul 10-14, 2015 (use the format 'Feb 17-18, 2020' (without the quotes)
+humantime: 9:00 am - 4:30 pm (use the format '9:00 am - 4:30 pm' (without the quotes)
+startdate: 2015-07-10 (use YYYY-MM-DD format like 2015-01-01)
+enddate: 2015-07-14 (use YYYY-MM-DD format like 2015-01-02)
 instructor: Amanda Miotto, Mitchell Stanton-Cook, Areej Alsheikh-Hussain, Sam Hames, Paula Martinez (list of names like ["Kay McNulty", "Betty Jennings", "Betty Snyder"])
 helper: Michael Imelfort (ACE), Nick Coghlan (Red Hat) (list of names like ["Marlyn Wescoff", "Fran Bilas", "Ruth Lichterman"])
 contact: b.weaver@uq.edu.au or m.stantoncook@gmail.com (contact email address for workshop organizer)
