--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ venue: St. Leo's College
 address: College Road, St Lucia QLD 4067 
 country: Australia 
 language: en 
-latlng: 
+latlng: -27.501425, 153.014930
 humandate: Jul 10-14, 2015 
 humantime: 9:00 am - 4:30 pm 
 startdate: 2015-07-10 
