--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ humantime: 9:00 am - 4:30 pm
 startdate: 2015-07-10 
 enddate: 2015-07-14 
 instructor: Amanda Miotto, Mitchell Stanton-Cook, Areej Alsheikh-Hussain, Sam Hames, Paula Martinez 
-helper: Michael Imelfort (ACE), Nick Coghlan (Red Hat)
+helper: Michael Imelfort, Nick Coghlan
 contact: b.weaver@uq.edu.au or m.stantoncook@gmail.com
 etherpad: # FIXME (insert the URL for your Etherpad if you're using one)
 eventbrite: # FIXME (delete this if not used, otherwise uncomment and provide 1234567890AB key for Eventbrite registration)
