--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ humandate: Jul 10-14, 2015
 humantime: 9:00 am - 4:30 pm 
 startdate: 2015-07-10 
 enddate: 2015-07-14 
-instructor: Amanda Miotto, Mitchell Stanton-Cook, Areej Alsheikh-Hussain, Sam Hames, Paula Martinez 
+instructor: ["Amanda Miotto", "Mitchell Stanton-Cook", "Areej Alsheikh-Hussain", "Sam Hames", "Paula Martinez"] 
 helper: ["Michael Imelfort", "Nick Coghlan"]
 contact: b.weaver@uq.edu.au or m.stantoncook@gmail.com
 etherpad: # FIXME (insert the URL for your Etherpad if you're using one)
