--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: workshop
 root: .
-venue: St. Leo's College
-address: College Road, St Lucia QLD 4067 
+venue: The University of Queensland
+address: St. Leo's College College Road, St Lucia QLD 4067 
 country: Australia 
 language: en 
 latlng: -27.501425, 153.014930
